--- a/paarka.cabal
+++ b/paarka.cabal
@@ -13,6 +13,7 @@ library
     exposed-modules:   Paarka.Utils
                      , Paarka.PaarkaCoin
                      , Paarka.AccessToken
+                     , Paarka.Paarka
     build-depends:     aeson
                      , base ^>=4.14.1.0
                      , containers
