--- a/paarka.cabal
+++ b/paarka.cabal
@@ -10,10 +10,10 @@ extra-source-files: CHANGELOG.md
 
 library
     hs-source-dirs:      src
-    exposed-modules:   Paarka.Utils
+    exposed-modules:   Paarka.Paarka
                      , Paarka.PaarkaCoin
                      , Paarka.AccessToken
-                     , Paarka.Paarka
+                     , Paarka.Utils
     build-depends:     aeson
                      , base ^>=4.14.1.0
                      , containers
