--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.4.1",
     "axios": "^0.21.4",
     "ipfs-http-client": "^52.0.5",
     "next": "11.1.2",
