--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.4.1",
+    "@tailwindcss/forms": "^0.3.4",
     "axios": "^0.21.4",
     "ipfs-http-client": "^52.0.5",
     "next": "11.1.2",
