--- a/smart-contracts/paarka.cabal
+++ b/smart-contracts/paarka.cabal
@@ -14,6 +14,7 @@ library
                      , Paarka.PaarkaCoin
                      , Paarka.AccessToken
                      , Paarka.Utils
+                     , Paarka.NFT
     build-depends:     aeson
                      , base ^>=4.14.1.0
                      , containers
