--- a/smart-contracts/paarka.cabal
+++ b/smart-contracts/paarka.cabal
@@ -15,6 +15,7 @@ library
                      , Paarka.AccessToken
                      , Paarka.Utils
                      , Paarka.NFT
+                     , Paarka.PAB
     build-depends:     aeson
                      , base ^>=4.14.1.0
                      , containers
@@ -26,6 +27,25 @@ library
                      , plutus-ledger-api
                      , plutus-tx-plugin
                      , plutus-tx
+                     , prettyprinter ^>=1.7.0
                      , text
     default-language: Haskell2010
     ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise
+
+executable paarka-pab
+  main-is: paarka-pab.hs
+  hs-source-dirs:      app
+  ghc-options:         -Wall -threaded
+  build-depends:       aeson
+                     , base ^>= 4.14.1.0
+                     , data-default
+                     , freer-extras
+                     , freer-simple
+                     , playground-common ^>= 0.1.0.0
+                     , plutus-contract
+                     , plutus-ledger
+                     , plutus-pab
+                     , paarka
+                     , plutus-use-cases
+                     , plutus-tx
+                     , text
