Add dependencies. still fails for qe and ord

--- a/smart-contracts/paarka.cabal
+++ b/smart-contracts/paarka.cabal
@@ -48,4 +48,5 @@ executable paarka-pab
                      , paarka
                      , plutus-use-cases
                      , plutus-tx
+                     , purescript-bridge
                      , text
