--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ client/.next
 
 # production
 /build
+dist-newstyle
 
 # misc
 .DS_Store
@@ -32,5 +33,6 @@ yarn-error.log*
 .env.test.local
 .env.production.local
 .env
+
 # vercel
 .vercel
