--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/forms": "^0.3.4",
     "axios": "^0.21.4",
     "ipfs-http-client": "^52.0.5",
+    "jwt-decode": "^3.1.2",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
