--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.8",
     "multer": "^1.4.3",
-    "nodemon": "^2.0.13"
+    "nodemon": "^2.0.13",
+    "jwt-decode": "^3.1.2"
   }
 }
