using datum for price

--- a/smart-contracts/paarka.cabal
+++ b/smart-contracts/paarka.cabal
@@ -28,6 +28,7 @@ library
                      , data-default
                      , freer-extras
                      , playground-common
+                     , plutus-chain-index
                      , plutus-contract
                      , plutus-ledger
                      , plutus-ledger-api
